--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "mongodb": "^3.6.5",
-    "mongoose": "^5.12.3"
+    "mongoose": "^5.12.3",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
