--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@slack/bolt": "^3.12.1",
     "axios": "^0.27.2",
+    "body-parser": "^1.20.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "mongodb": "^3.6.5",
     "mongoose": "^5.12.3",
+    "qs": "^6.11.0",
     "request": "^2.88.2"
   },
   "devDependencies": {
